2011-06-23  Robert Larice
 * src/xspice/icm/spice2poly/icm_spice2poly/cfunc.mod :
   malloc return value cast

2011-06-23  Robert Larice
 * src/ciderlib/oned/onemesh.c ,
 * src/spicelib/devices/nbjt/nbjttemp.c :
   tiny rewrite, (integer + integer)/2

2011-06-23  Robert Larice
 * src/frontend/evaluate.c ,
 * src/misc/hash.c ,
 * src/spicelib/devices/ltra/ltraset.c ,
 * src/xspice/evt/evtdump.c :
   function pointer invocation, (*p)(...)  --->  p(...)

2011-06-23  Robert Larice
 * src/main.c :
   tiny fix, reoccuring option `h' in the getopt_long() option string

2011-06-23  Robert Larice
 * src/frontend/com_sysinfo.c :
   tiny rewrite, typefix, don't compare EOF with a char

2011-06-23 Holger Vogt
 * measure.c: another try to obtain correct vector handling

2011-06-22  Robert Larice
 * src/ngsconvert.c ,
 * src/frontend/outitf.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/help/readhelp.c ,
 * src/misc/dstring.c ,
 * src/misc/hash.c :
   remove some useless casts

2011-06-22  Robert Larice
 * src/spicelib/devices/bsim4/b4geo.c ,
 * src/spicelib/devices/bsim4/b4noi.c ,
 * src/spicelib/devices/bsim4/b4temp.c :
   cleanup bsim4 prototypes

2011-06-22  Robert Larice
 * src/frontend/commands.c ,
 * src/frontend/misccoms.h ,
 * src/frontend/rawfile.c ,
 * src/frontend/vectors.c ,
 * src/frontend/plotting/pvec.c ,
 * src/include/fteext.h :
   cleanup some reoccuring function prototypes

2011-06-22  Robert Larice
 * src/spicelib/analysis/Makefile.am ,
 * src/spicelib/analysis/ckt.h ,
 * src/spicelib/analysis/cktdelt.c ,
 * visualc/vngspice.vcproj :
   remove ancient artifact "ckt.h"

2011-06-19  Dietmar Warning
 * Code merged into bsim4v4: Code diff's from formerly version 4v2 and 4v3 merged into
   4v4, selectable by "version=4.x.0" model parameter (x=2,3 ... 4)
 * Update to version 4.7.0: new code into bsim4 folder, Version 6 is now in
   new folder bsim4v6, OpenMP implemented, Update of tests/bsim4 to new version